--- a/app/[id]/post.scss
+++ b/app/[id]/post.scss
@@ -1,4 +1,5 @@
-@import "../app/colors.scss";
+@import "../colors.scss";
+
 .clickable:hover {
     cursor: pointer;
 }
@@ -6,6 +7,7 @@
     margin: 10px;
     border: 2px solid white;
     border-radius: 10px;
+    font-weight: 600;
 }
 .post-heading {
     position: relative;
@@ -14,12 +16,12 @@
     background-color: $secondary;
 }
 .post-title {
-    font-size: 1em;
+    font-size: 3em;
 }
 .post-details {
-    font-size: 0.5em;
+    font-size: 1em;
 }
 .post-content {
-    font-size: 0.7em;
+    font-size: 1.5em;
     padding: 10px 0px 10px 10px;
 }
