--- a/components/post.scss
+++ b/components/post.scss
@@ -23,3 +23,26 @@
     font-size: 0.7em;
     padding: 10px 0px 10px 10px;
 }
+
+.comment-body {
+    margin: 10px;
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
+.comment-heading {
+    position: relative;
+    padding: 10px 10px 10px 10px;
+    border-radius: 6px;
+    background-color: $secondary;
+}
+.comment-details {
+    font-size: 1em;
+    font-weight: 200;
+}
+.comment-content {
+    font-size: 1em;
+    padding: 10px 0px 10px 10px;
+    font-weight: 300;
+}
+
