--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,9 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+body > * {
+  font-family: var(--font-mono);
+}
 
 body {
   color: rgb(var(--foreground-rgb));
